--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/estoqueapi
 spring.datasource.username=root
 spring.datasource.password=swxaqz123
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+security.oauth2.client.scope=password
+security.oauth2.client.client-id=adrianopavaneli
+security.oauth2.client.client-secret=12345678
